Finished conditions.sage
Former-commit-id: db8afd55e9beb92457654ca96b7d8a76f0c45949

--- a/index.org
+++ b/index.org
@@ -13,7 +13,7 @@ Should scrap (%)
 ** diophantine_equations/
 Code to analyze diophantine equations
 
-*** conditions.sage (*#)
+*** conditions.sage (*#!)
 Conditions on diophantine variables
 - Add decorator for conditional functions
 
