Work done on 21-02
Former-commit-id: 2676b2edee587548230d776e0ab2be1cd815f38e

--- a/index.org
+++ b/index.org
@@ -148,6 +148,7 @@ precision
 Classes for storing pAdic data in a tree like format
 - Method pAdicNode.sub_tree() is nowhere used and weird, remove?
 - Optimize _merge_with_list
+- Add sequence/set like behavior to pAdicNodeCollection
 ** polynomial/
 Code for working with polynomials
 *** symmetric_polynomials.sage (*#!)
