Work done on 27-02
Former-commit-id: 58cc829c55fc5445e928756a719d27c1e0f690e2

--- a/index.org
+++ b/index.org
@@ -163,7 +163,7 @@ Methods for computing conductors of frey curves
 Unfinished code for Papadopoulus table lookup
 - Remove from load path
 - Remove or rewrite
-*** TatesAlgorithm.sage (*-)
+*** TatesAlgorithm.sage (*+!)
 An implementation of Tate's algorithm that works for Frey curves
 ** tests/
 Code for (automated) testing
