Stylized newform_wrapper.sage
Former-commit-id: 884ff7541d5d2b71b3325cfdb2da6cffa2415e06

--- a/index.org
+++ b/index.org
@@ -130,7 +130,7 @@ Code to analyze modular forms
 Methods for eliminating newforms
 - Add better tracking system for primes
 
-*** newform wrapper.sage (*+)
+*** newform wrapper.sage (*#!)
 Wrapper classes around newforms and a new method to get newforms
 - Can the argument minimal_coeffs of get_newforms be removed?
 ** number_fields/
