--- a/index.org
+++ b/index.org
@@ -126,9 +126,10 @@ Method to solve a linear equation over Z with torsion
 - Make the code use left multiplication?
 ** modular_forms/
 Code to analyze modular forms
-*** elimination.sage (*-)
+*** elimination.sage (*+!)
 Methods for eliminating newforms
 - Add better tracking system for primes
+- Improve the elimination of l
 
 *** newform wrapper.sage (*#!)
 Wrapper classes around newforms and a new method to get newforms
