Modified method newform_levels
Former-commit-id: bc32d1587e0cfcd09871badf259a939f089300a1

--- a/index.org
+++ b/index.org
@@ -28,10 +28,10 @@ Code for elliptic curves
 *** frey_curves.sage (*+)
 Frey curve classes
 - Add verbosity to primes_of_possible_additive_reduction
-*** Q-curves.sage (*#!)
+- Scrap the methods newforms!!
+*** Q-curves.sage (*+!)
 Implementation of Q-curves
 - Replace guessed degrees by sage isogeny code
-- Split up the method _newform_levels
 - Use new newform wrappers in method newform and split up code
 *** tates_algorithm.sage (*+!)
 An implementation of Tate's algorithm that works for Frey curves
