Stylized prime_power.sage
Former-commit-id: ff12d271c2c1a0d8d90e7da6f6f9193d79ec8b4b

--- a/index.org
+++ b/index.org
@@ -20,9 +20,11 @@ Conditions on diophantine variables
 *** Frey_curve_construction.sage
 Some functions to make Frey curves
 
-*** prime_power.sage (*+)
+*** prime_power.sage (*+!)
 Methods for analyzing diophantine equations of the form polynomial equals prime power
 - Integrate with conditions??
+- Keep track of previously computed prime data
+- Combine conditions into one??
 ** elliptic_curves/
 Code for elliptic curves
 *** frey_curves.sage (*+!)
