Turned Dieulefait-Freitas-2014 into .rst format (+ found a bug)
Former-commit-id: 65a55aa5fc62bf06a75ebb727b168af8dd37c342

--- a/index.org
+++ b/index.org
@@ -1,3 +1,5 @@
+* TODO Fix bug in pAdic_node._limit_to (children removing itself during iteration)
+
 * Legend
 Part of load.sage (*)
 Partial documentation (-)
