--- a/index.org
+++ b/index.org
@@ -9,78 +9,42 @@ Should scrap (%)
 * File overview
 
 ** database/
-
+A database of examples to use and test the code
+*** Bennett-Chen-2012.rst
+Computations from "Multi-Frey Q-curve and the Diophantine equation a^2 + b^6 = c^n"
+by Michael A. Bennett and Imin Chen
+in Algebra & Number Theory, volume 6 (2012), no. 4.
+*** Bennett-Chen-Dahmen-Yazdani-2014.rst
+Computations from "On the equation a^3 + b^(3 n) = c^2"
+by M. A. Bennett, Imin Chen, Sander R. Dahmen and Soroosh Yazdani
+in Acta Arithmetica 163 (2014), no. 4, pages 327-343
+*** Dieulefait-Freitas-2014.rst
+Computations from "The Fermat-type equations x^5 + y^5 = 2 z^p or 3 z^p solved through Q-curves"
+by Luis Dieulefait and Nuno Freitas
+in Mathematics of Computation, volume 83 (2014), no. 286, pages 917-933
+*** Dieulefait-Urroz-2009.rst
+Computations from "Solving Fermat-type equations via modular Q-curve over polyquadratic fields"
+by Luis Dieulefait and Jorge Jiménez Urroz
+in Journal für die reine und angewandte Mathematik, volume 633 (2009), pages 183-195
+*** Ellenberg-2002.rst
+Computations from "Galois representations attacted to Q-curves and the generalized Fermat equation A^4 + B^2 = C^p"
+by Jordan S. Ellenberg
+in American Journal of Mathematics, volume 126 (2004), no. 4, pages 763-787
 ** examples/
 Examples of various things
 *** counter example alpha in OK.sage
 Data to show that not every cocycle with values in {\pm 1} is the
 coboundary of a function to the ring of integers of a field.
 - Modify to not use matrix_operations.sage
-*** Dieulefait.sage
-Repeated conductor computations from an article of Dieulefait
-Considering the diophantine equation x^4 + c*y^2 = z^l
-! Uses deprecated DiophantineAnalyzer
-- Is it in database?
-- Remove or move and update
-*** frey curve conductor (-)
-Conductor computations of frey curves by Merel and Ellenberg
-Equations a^n + b^n = 2*c^n, a^n + b^n = c^2, a^n + b^n = c^2,
-a^n + b^n = c^3, a^4 + b^2 = c^n
-- Is it in database?
-- Remove or move and update
-*** literature/
-Examples from the literature
-- Move into database if not already there
-**** Bennet-Chen-2014.sage (-)
-Frey curve computations of frey curves by Bennet and Chen
-Equation a^2 + b^6 = c^l
-- Is it in database?
-- Remove or move and update
-**** Bennet-Chen-Dahmen-Yazdani-2014.sage (-)
-Frey curve computations of frey curves by Bennet, Chen, Dahmen and
-Yazdani
-Equation a^3 + b^(3*n) = c^2
-- Is it in database?
-- Remove or move and update
-**** Dieulefait-Freitas-2014.sage (-)
-Frey curve computations of frey curves by Dieulefait and Freitas
-Equations x^5 + y^5 = 2*z^l, x^5 + y^5 = 3*z^l
-- Is it in database?
-- Remove or move and update
-**** Dieulefait-Urroz-2008.sage (-)
-Frey curve computations of frey curves by Dieulefait and Urroz
-Equation x^4 + 2*y^2 = z^l
-- Is it in database?
-- Remove or move and update
-*** Q-curve examples.sage (-)
-Examples of Q-curves
-- Is it in database?
-- Remove or move and update
 *** Q-curve families.sage (-)
 Families of Q-curves
 - Is it in database?
 - Remove or move and update
-*** Q-curve tests.sage
-Small tests on Q-curves with two isogeny
-- Superceded by new tests?
-- Remove or move and update
-*** scr.sage
-A check on Tate's algorithm
-- Make into a doctest
 *** test1.sage
 Examples of Tates algorithm
 Equations x^l + y^l = z^l, x^2 - 11 = y^l, x^3 - x - 2 = y^l,
 x^3 = 13 = y^l, x^4 + x^3 - 3*x^2 + 11*x + 2 = y^l
-- Are these in database?
-- Remove or move and update
-*** test.sage
-A test on Tate's algorithm
-- Make into a doctest of performTatesAlgorithm
-*** tmp2.sage
-Old conductor computations (no results)
-Equations x^l + y^l = z^2 and x^l + y^l = z^3
-- Are these in database?
-! Uses the remove DiophantineAnalyzer
+- Move and update
 ** src/
 *** diophantine_equations/
  Code to analyze diophantine equations
