--- a/examples/EDS/D125.rst
+++ b/examples/EDS/D125.rst
@@ -22,7 +22,7 @@ the tests from by editing the code below. Note that the file
 
    sage: from modular_method.diophantine_equations.conditions import apply_to_conditional_value
    sage: from modular_method.number_fields.galois_group import cyclotomic_galois_isomorphism
-   sage: load('frey_curves.sage')
+   sage: load("examples/EDS/frey_curves.sage")
 
 First of all we construct the elliptic curve :math:`E_{125}` and
 compute generators for the abelian group :math:`E_{125}(\QQ)`.
