--- a/examples/EDS/Dm17.rst
+++ b/examples/EDS/Dm17.rst
@@ -21,7 +21,7 @@ the tests from by editing the code below. Note that the file
 ::
 
    sage: from modular_method.diophantine_equations.conditions import apply_to_conditional_value
-   sage: load("frey_curves.sage")
+   sage: load("examples/EDS/frey_curves.sage")
 
 First of all we construct the elliptic curve :math:`E_{-17}` and
 compute generators for the abelian group :math:`E_{-17}(\QQ)`.
@@ -62,9 +62,9 @@ them later from our computations.
 
 We compute all the non-trivial perfect powers among the denominators
 of these points. Note that they are all squares.
-   
+
 ::
-      
+
    sage: perfect_powers = [
    ....:     P for P in compare
    ....:     if sqrt(P.xy()[0].denominator()).is_perfect_power() and
@@ -128,7 +128,7 @@ We check that the remaining conditions correspond to the ones in Table
 5.1.
 
 ::
-   
+
    sage: assert all(mod(ww^2 - a*zz^4, 2) == 1
    ....:            for zz, ww in e2[0][1].pAdic_tree().give_as_congruence_condition()[0])
    sage: assert all(mod(ww^2 - a*zz^4, 2^9) == 2^8
@@ -137,9 +137,9 @@ We check that the remaining conditions correspond to the ones in Table
    ....:            for zz, ww in e2[2][1].pAdic_tree().give_as_congruence_condition()[0])
 
 Finally we assert that the conductor exponent at 17 is always 1.
-   
+
 ::
-      
+
    sage: apply_to_conditional_value(lambda E: E.conductor_exponent(17), E1zw)
    1
 
@@ -168,7 +168,7 @@ We confirm that the total number of newforms agrees with what is
 mentioned in Section 5.5.2.
 
 ::
-   
+
    sage: apply_to_conditional_value(lambda Enfs: len(Enfs[1]), Enfs1)
    33 if ('z', 'w') == (1, 0), (3, 0) mod 4
    1  if ('z', 'w') is 1 of 128 possibilities mod 128
@@ -177,7 +177,7 @@ Now we perform elimination by comparing traces of Frobenius at the
 primes :math:`p < 50` with :math:`p \neq 2, 17`.
 
 ::
-      
+
    sage: Enfs1 = apply_to_conditional_value(
    ....:     lambda Enfs: (Enfs[0], eliminate_by_traces(
    ....:         Enfs[0],
@@ -194,7 +194,7 @@ agrees with the result in Section 5.5.2. Furthermore we check that all
 the others are eliminated for all prime exponents :math:`l > 5`.
 
 ::
-      
+
    sage: apply_to_conditional_value(lambda Enfs: sum(1 for nf in Enfs[1] if nf[-1] == 0), Enfs1)
    8 if ('z', 'w') == (1, 0), (3, 0) mod 4
    1 if ('z', 'w') is 1 of 128 possibilities mod 128
@@ -221,7 +221,7 @@ corresponding :math:`B` satisfying equation (5.5) can exist. If not we
 label it as a pseudo solution.
 
 ::
-      
+
    sage: bad_j = set(nf._f.EllipticCurve().sage().j_invariant() for nf in bad_nfs)
    sage: E1zwj = E1zw[0][0].j_invariant()
    sage: polys = set(poly for Efj in bad_j for poly, _ in (E1zwj - Efj).numerator().factor()
@@ -258,9 +258,9 @@ compute the additional conditions this imposes.
    sage: C7 = CongruenceCondition(w^2 - a*z^4, 7)
 
 We filter then newforms using the additional condition `C2`.
-   
+
 ::
-      
+
    sage: Enfs1P = ConditionalValue([
    ....:     (Enfs, C & C2) for Enfs, C in Enfs1
    ....:     if not (C & C2).pAdic_tree(pAdics=pAdicBase(QQ, 2)).is_empty()
@@ -272,7 +272,7 @@ additional information all newforms can be elimination when :math:`l >
 3`.
 
 ::
-   
+
    sage: Enfs1P = apply_to_conditional_value(
    ....:     lambda Enfs: (Enfs[0], eliminate_by_traces(
    ....:         Enfs[0],
@@ -306,17 +306,17 @@ We check that `Em17zw` is completely defined over :math:`K =
 
 We verify that the trivial character is a splitting character for
 `Em17zw`.
-   
+
 ::
-   
+
    sage: assert Em17zw.splitting_character().conductor() == 1
 
 Next we compute the tables of 2-cocycles corresponding to `Em17zw` and
 a splitting map. We use the same notation as in Section 5.5.2 for the
 Galois elements.
-   
+
 ::
-   
+
    sage: G = K.galois_group()
    sage: sqrt2, sqrtm17 = sqrt(K(2)), sqrt(K(-17))
    sage: s2 = next(s for s in G if s != G(1) and s(sqrt2) == sqrt2)
@@ -346,7 +346,7 @@ Next we verify that the second map :math:`\alpha` given in Section
 5.5.2 indeed has the desired coboundary.
 
 ::
-   
+
    sage: alpha = {
    ....:     G(1): 1,
    ....:     s2: -1,
@@ -358,9 +358,9 @@ Next we verify that the second map :math:`\alpha` given in Section
 
 We also check that the element :math:`\gamma` given in Section 5.5.2
 has coboundary :math:`\alpha^2`.
-   
+
 ::
-      
+
    sage: gamma = 1 + 3*sqrt2
    sage: assert all(s(gamma) == alpha[s]^2 * gamma for s in G)
 
@@ -371,7 +371,7 @@ product of abelian varieties of GL_2-type. Furthermore we check that
 twisted curve.
 
 ::
-      
+
    sage: Em17zwg = Em17zw.twist(gamma)
    sage: assert Em17zwg.does_decompose()
    sage: assert K == Em17zwg.definition_field()
@@ -395,12 +395,12 @@ the expression in Section 5.5.2.
    sage: Nm17.left().left().left().right()[1]
    (6,
     The condition that ('z', 'w') == (0, 1), (0, 7), (2, 1), (2, 7), (4, 1), (4, 7), (6, 1), (6, 7) mod 8)
-    
+
 Next we verify that we get the same levels for the newforms after
 level lowering as in Section 5.5.2.
 
 ::
-   
+
    sage: levels = Em17zwg.newform_levels(bad_primes=K.primes_above(2*17)); levels
    [(73984, 73984)]               if ('z', 'w') == (1, 0), (3, 0) mod 4
    [(9248, 18496), (18496, 9248)] if ('z', 'w') is 1 of 8 possibilities mod 8
@@ -415,7 +415,7 @@ computations take too long.
 ::
 
    sage: nfsm17 = Em17zwg.newform_candidates(bad_primes=K.primes_above(2*17), algorithm='magma', conjugates=False)
-   
+
 We eliminate newforms by comparing traces of Frobenius at the primes
 mentioned in Section 5.5.2. Note that we use the option `use_minpoly`
 here as enabling this option can immediately exclude an entire
@@ -423,7 +423,7 @@ conjugacy class of newforms. Since we only have one newform per
 conjugacy class we need to do this for the correct result.
 
 ::
-   
+
    sage: primes = [3, 5, 7, 11, 13, 19, 29, 31, 37, 41, 43, 47, 59, 67, 73, 97, 113]
    sage: nfsm17 = eliminate_by_traces(Em17zwg, nfsm17, condition=CoprimeCondition([z, w]),
    ....:                              primes=primes, verbose=True, use_minpoly=True)
@@ -432,7 +432,7 @@ We check that after this elimination there remain 10 newforms and the
 others are eliminated for all prime exponents :math:`l > 31`.
 
 ::
-   
+
    sage: apply_to_conditional_value(lambda nfs: sum(1 for nf in nfs if nf[-1] == 0), nfsm17)
    6 if ('z', 'w') == (1, 0), (3, 0) mod 4
    4 if ('z', 'w') is 1 of 8 possibilities mod 8
@@ -449,13 +449,13 @@ denominator of `P + Q + T`, which in this case is only 7.
    sage: P1 = P + Q + T
    sage: assert P1.xy()[0].denominator().prime_factors()
    [7]
-   
+
 We perform the elimination again at 7, using this additional
 condition. We find that all newforms are eliminated in this case
 whenever :math:`l > 17` or :math:`l = 3, 11`.
 
 ::
-   
+
    sage: nfsm17P = eliminate_by_trace(Em17zwg, nfsm17, 7,
    ....:                              condition=(CoprimeCondition([z, w]) &
    ....:                                         CongruenceCondition(w^2 - a*z^4, 7)),
